Updated framework wrap logic to fix dropdown bug

--- a/static/static/scss/hxui.scss
+++ b/static/static/scss/hxui.scss
@@ -59,7 +59,7 @@ html {
     @import 'imports';
   }
 } @else {
-  html {
+  * {
     @import 'imports';
   }
 }
